--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@types/gsap": "^3.0.0",
     "framer-motion": "^11.3.2",
     "gsap": "^3.12.5",
