--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@gsap/react": "^2.1.1",
     "@types/gsap": "^3.0.0",
     "framer-motion": "^11.3.2",
+    "googleapis": "^140.0.1",
     "gsap": "^3.12.5",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "resend": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
