--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@types/gsap": "^3.0.0",
+    "axios": "^1.7.2",
     "framer-motion": "^11.3.2",
     "googleapis": "^140.0.1",
     "gsap": "^3.12.5",
