--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@types/gsap": "^3.0.0",
+    "@types/react-youtube": "^7.10.0",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.2",
     "googleapis": "^140.0.1",
@@ -19,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-youtube": "^10.1.0",
     "resend": "^3.4.0"
   },
   "devDependencies": {
