--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.1",
     "@types/gsap": "^3.0.0",
     "@types/react-youtube": "^7.10.0",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.2",
     "googleapis": "^140.0.1",
