--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.3.2",
     "googleapis": "^140.0.1",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.438.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
